changed vim/urxvt/tmux colors, added mechanisms for easy colorscheme switching. added some scripts from home/bin directory. repackaged vim directory

--- a/tmux.conf
+++ b/tmux.conf
@@ -44,15 +44,25 @@ set -g mouse-resize-pane on
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
-# colorz
-set -g status-bg "#1f1f1f"
-set -g status-fg "#51b7ff"
-set -g message-style bg="#cccccc",fg=black
-set -g message-command-style bg="#cccccc",fg=black
-set -g pane-active-border-style fg="#285b7f"
-set -g pane-border-style fg="#285b7f"
-set -g mode-style bg="#cccccc",fg=black
+# minimalist status
 set -g status-left ""
 set -g status-right ""
 set -g status-justify centre
 
+# bclear colors
+set -g status-bg "#dddddd"
+set -g status-fg "#0087d7"
+set -g message-style bg="#cccccc",fg=black
+set -g message-command-style bg="#cccccc",fg=black
+set -g pane-active-border-style fg="#dddddd"
+set -g pane-border-style fg="#dddddd"
+set -g mode-style bg="#cccccc",fg=black
+
+# dark/ice colors (used with x-dotshare)
+# set -g status-bg "#1f1f1f"
+# set -g status-fg "#51b7ff"
+# set -g message-style bg="#cccccc",fg=black
+# set -g message-command-style bg="#cccccc",fg=black
+# set -g pane-active-border-style fg="#285b7f"
+# set -g pane-border-style fg="#285b7f"
+# set -g mode-style bg="#cccccc",fg=black
